crates/engine_xetex/xetex/xetex-xetexd.h

/* The annoying `memory_word` type. We have to make sure the byte-swapping
 * that the (un)dumping routines do suffices to put things in the right place
 * in memory.
 *
 * This set of data used to be a huge mess (see comment after the
 * definitions). It is now (IMO) a lot more reasonable, but there will no
 * doubt be carryover weird terminology around the code.
 *
 * ## ENDIANNESS (cheat sheet because I'm lame)
 *
 * Intel is little-endian. Say that we have a 32-bit integer stored in memory
 * with `p` being a `uint8` pointer to its location. In little-endian land,
 * `p[0]` is least significant byte and `p[3]` is its most significant byte.
 *
 * Conversely, in big-endian land, `p[0]` is its most significant byte and
 * `p[3]` is its least significant byte.
 *
 * ## MEMORY_WORD LAYOUT
 *
 * Little endian:
 *
 *   bytes: --0-- --1-- --2-- --3-- --4-- --5-- --6-- --7--
 *   b32:   [lsb......s0.......msb] [lsb......s1.......msb]
 *   b16:   [l..s0...m] [l..s1...m] [l..s2...m] [l..s3...m]
 *
 * Big endian:
 *
 *   bytes: --0-- --1-- --2-- --3-- --4-- --5-- --6-- --7--
 *   b32:   [msb......s1.......lsb] [msb......s0.......lsb]
 *   b16:   [m..s3...l] [m..s2...l] [m..s1...l] [m...s0..l]
 *
 */

//#ifdef WORDS_BIGENDIAN
//
//typedef struct b32x2_be_t { int32_t s1, s0; } b32x2;
//typedef struct b16x4_be_t { uint16_t s3, s2, s1, s0; } b16x4;
//
//#else
//
//typedef struct b32x2_le_t { int32_t s0, s1; } b32x2;
//typedef struct b16x4_le_t { uint16_t s0, s1, s2, s3; } b16x4;
//
//#endif /*WORDS_BIGENDIAN*/

typedef B16x4 b16x4;
typedef B32x2 b32x2;
typedef MemoryWord memory_word;
extern void *loaded_font_mapping;
extern char loaded_font_flags;
extern scaled_t loaded_font_letter_space;
extern int32_t native_font_type_flag;
void font_feature_warning(const void *featureNameP, int32_t featLen, const void *settingNameP, int32_t setLen);
void font_mapping_warning(const void *mappingNameP, int32_t mappingNameLen, int32_t warningType);
int32_t get_tracing_fonts_state(void);